--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="header-time">MentorWave</div>
         <div class="header-profile">
-            <span>Hi, Ankita</span>
+            <span>Hi, yodha</span>
             <img src="media/profile.png" alt="Profile Picture">
         </div>
     </div>
@@ -42,7 +42,7 @@
             </div>
             <div class="stat-item">
                 <h3>209</h3>
-                <p>Batchmates from 2012 batch</p>
+                <p>Batchmates from 2023 batch</p>
             </div>
             <div class="stat-item">
                 <h3>2702</h3>
